# skills-ai-agent-manager

./: app.py  justfile  main.py  pyproject.toml
.streamlit/: config.toml
models/: skills.py
pages/: all_skills.py  create.py  delete.py  edit.py  update.py  view.py
queries/: all_data.sql  crud_skill_example_queries.sql  crud_skill_tags.sql  crud_skill_tools.sql  crud_skills.sql
utils/: clean_list.py  embedding.py  list.py  list_to_string.py
